# SMA

./: .gitignore  CMakeLists.txt  README.md
example/: Application.cpp  Application.h  CMakeLists.txt  InputListener.cpp  InputListener.h  main.cpp
src/: Application.cpp  Application.hpp  Atom.cpp  Atom.hpp  AtomManager.cpp  AtomManager.hpp  Atom_Apply.cpp  Atom_Apply.hpp  Atom_Apply_Virt.cpp  Atom_Apply_Virt.hpp  Atom_Association.cpp  Atom_Association.hpp  Atom_Association_Virt.cpp  Atom_Association_Virt.hpp  Atom_Bound.cpp  Atom_Bound.hpp  Atom_Bound_Virt.cpp  Atom_Bound_Virt.hpp  Atom_Lambda.cpp  Atom_Lambda.hpp  Atom_Lambda_Virt.cpp  Atom_Lambda_Virt.hpp  Atom_Term.cpp  Atom_Term.cppg  Atom_Term.hpp  Atom_Term_Virt.cpp  Atom_Term_Virt.hpp  Atom_Unbound.cpp  Atom_Unbound.hpp  Atom_Unbound_Virt.cpp  Atom_Unbound_Virt.hpp  Atoms.hpp  Bond.cpp  Bond.hpp  Geometry.cpp  Geometry.hpp  Global.cpp  Global.hpp  Graph.cpp  Graph.hpp  (+22 more)
